--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 html, body {
   margin: 0;
   font-family: "Verdana";
+  background-color: #2E4052;
 }
 
 .searchBook {
@@ -27,13 +28,11 @@ html, body {
   margin-top: 0.1vh;
 }
 
-.conteneur {
+.listBook {
   display: grid;
   grid-template-columns: 1;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-}
-
-.listBook {
+  grid-gap: 2vh;
   padding-left: 0;
   margin-top: 0;
   font-size: 14px;
@@ -49,6 +48,21 @@ html, body {
   padding-bottom: 3vh;
   padding-left: 2vw;
   border-bottom: 1px solid #2E4052;
+  grid-row-start: 1;
+  grid-row-end: span 1;
+}
+
+.book2 {
+  display: grid;
+  grid-template-columns: 20vw 1fr;
+  background-color: #D2D7DF;
+  color: #2E4052;
+  padding-top: 3vh;
+  padding-bottom: 3vh;
+  padding-left: 2vw;
+  border-bottom: 1px solid #2E4052;
+  grid-row-start: 2;
+  grid-row-end: span 1;
 }
 
 .bookCover {
