--- a/style.scss
+++ b/style.scss
@@ -18,6 +18,7 @@ $lightGrey: #D2D7DF;
 html,body {
     margin: 0;
     font-family: "Verdana";
+    background-color: $charcoal;
 }
 
 .searchBook{
@@ -35,13 +36,15 @@ html,body {
 }
 
 .conteneur{
-    display:grid;
-    grid-template-columns: 1;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+   
 }
 
 .listBook{
     // list-style: none;
+    display:grid;
+    grid-template-columns: 1;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: 2vh;
     padding-left: 0;
     margin-top: 0;
     font-size: 14px;
@@ -57,6 +60,21 @@ html,body {
     padding-bottom: 3vh;
     padding-left: 2vw;
     border-bottom: 1px solid $charcoal;
+    grid-row-start:1;
+    grid-row-end: span 1;
+}
+
+.book2{
+    display:grid;
+    grid-template-columns: 20vw 1fr;
+    background-color: $lightGrey;
+    color: $charcoal;
+    padding-top: 3vh;
+    padding-bottom: 3vh;
+    padding-left: 2vw;
+    border-bottom: 1px solid $charcoal;
+    grid-row-start:2;
+    grid-row-end: span 1;
 }
 
 .bookCover{
