--- a/style.css
+++ b/style.css
@@ -31,25 +31,25 @@ html, body {
 .listBook {
   display: grid;
   grid-template-columns: 1;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
   grid-gap: 2vh;
   padding-left: 0;
   margin-top: 0;
   font-size: 14px;
   vertical-align: middle;
+  margin-bottom: 0;
 }
 
 .book1 {
   display: grid;
   grid-template-columns: 20vw 1fr;
+  grid-template-rows: 1;
   background-color: #D2D7DF;
   color: #2E4052;
   padding-top: 3vh;
   padding-bottom: 3vh;
   padding-left: 2vw;
   border-bottom: 1px solid #2E4052;
-  grid-row-start: 1;
-  grid-row-end: span 1;
 }
 
 .book2 {
@@ -65,20 +65,67 @@ html, body {
   grid-row-end: span 1;
 }
 
-.bookCover {
-  grid-column-start: 1;
-  grid-column-end: 2;
-}
-
 .bookTitle {
   display: table-cell;
-  grid-column-start: 2;
-  grid-column-end: 3;
   vertical-align: middle;
+  margin: 0 !important;
 }
 
 .title {
   font-size: 16px;
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+
+.pagination {
+  display: grid;
+  grid-template-rows: 1fr;
+}
+
+.paginationLink {
+  text-decoration: none;
+}
+
+.lien {
+  display: inline !important;
+}
+
+.listeNav {
+  padding: 0;
+  margin-top: 0;
+  margin-bottom: 2vh;
+  list-style-type: none;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.listeNav li {
+  margin-left: 2px;
+  margin-right: 2px;
+  float: left;
+  /*pour IE*/
+  width: 30px;
+  border: none;
+  background-color: #2E4052;
+}
+
+.listeNav li a {
+  display: block;
+  float: left;
+  width: 20px;
+  background-color: #2E4052;
+  color: #FFC857;
+  text-decoration: none;
+  text-align: center;
+  padding: 5px;
+  /*pour avoir un effet "outset" avec IE :*/
+}
+
+.conteneurPagination {
+  margin: auto;
+  text-align: center;
+  justify-content: center;
+  justify-items: center;
 }
 
 /*# sourceMappingURL=style.css.map */
