--- a/style.scss
+++ b/style.scss
@@ -149,3 +149,10 @@ html,body {
     justify-content: center;
     justify-items: center;
 }
+
+@media screen and (min-width: 1000px) {
+    .listBook{
+        margin-left: 3vw;
+        margin-right: 3vw;
+    }
+}
